# ContigWeaver

./: .gitignore  README.md  feature.txt  feature_2.txt  main.py  pyproject.toml  requirements.txt  setup.py
contignexus/: __init__.py  __main__.py  pipeline.py
contignexus/modules/: crispr_miner.py  gfa_parser.py  graph_exporter.py
contignexus/tests/: test_crispr_miner.py  test_ecological_miner.py  test_gfa_parser.py  test_graph_exporter.py
contignexus/utils/: __init__.py
contigweaver/: __init__.py  __main__.py  pipeline.py
contigweaver/modules/: __init__.py  annotation_converter.py  annotation_miner.py  binning_miner.py  contig_reconciler.py  crispr_miner.py  ecological_miner.py  gfa_parser.py  graph_exporter.py
contigweaver/tests/: __init__.py  conftest.py  test_annotation_converter.py  test_annotation_miner.py  test_binning_miner.py  test_contig_reconciler.py  test_crispr_miner.py  test_ecological_miner.py  test_gfa_parser.py  test_graph_exporter.py  test_graph_exporter_fallback.py  test_pipeline_integration.py
