[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "contignexus"
version = "1.0.0"
description = "Reconstruct inter-contig interactions from low-depth metagenomic data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["metagenomics", "bioinformatics", "assembly graph", "CRISPR", "network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "networkx>=3.0",
    "pyvis>=0.3.2",
    "pandas>=2.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
contignexus = "contignexus.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["contignexus*"]
